# DEF-Situational-Awareness-BOF

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
aggressor/: dani-suite.cna
bof-kerberos/: Cargo.toml
bof-kerberos/src/: lib.rs
bof-ldap/: Cargo.toml
bof-ldap/src/: conn.rs  dfr.rs  entry.rs  filter.rs  lib.rs  search.rs
bof-sspi/: Cargo.toml
bof-sspi/src/: ap_req.rs  dfr.rs  lib.rs
c2-collection/add-machine-account/: Cargo.toml
c2-collection/add-machine-account/src/: lib.rs
c2-collection/cve-2022-26923/: Cargo.toml
c2-collection/findobjects/: Cargo.toml
c2-collection/findobjects/src/: lib.rs
c2-collection/kerberoast/: Cargo.toml
c2-collection/kerberoast/src/: lib.rs
c2-collection/lapsdump/: Cargo.toml
c2-collection/lapsdump/src/: lib.rs
c2-collection/petit-potam/: Cargo.toml
c2-collection/petit-potam/src/: lib.rs
c2-collection/psk/: Cargo.toml
c2-collection/psm/: Cargo.toml
c2-collection/psm/src/: lib.rs
c2-collection/psx/: Cargo.toml
c2-collection/psx/src/: lib.rs
c2-collection/spray-ad/: Cargo.toml
c2-collection/spray-ad/src/: lib.rs
c2-collection/start-web-client/: Cargo.toml
c2-collection/start-web-client/src/: lib.rs
c2-collection/wdtoggle/: Cargo.toml
c2-collection/wdtoggle/src/: lib.rs
c2-collection/winver/: Cargo.toml
c2-collection/winver/src/: lib.rs
common/: Cargo.toml
common/src/: com.rs  credit.rs  dfr.rs  evasion.rs  hash.rs  lib.rs  mitre.rs  obf.rs  panic_safe.rs  str_util.rs  syscalls.rs  token.rs
common/tests/: hash_test.rs  mitre_test.rs  obf_test.rs  panic_safe_test.rs  str_util_test.rs
docs/: bof-catalog.md  mitre-mapping.md
operators-kit/add-exclusion/: Cargo.toml
operators-kit/add-exclusion/src/: lib.rs
operators-kit/add-firewall-rule/: Cargo.toml
operators-kit/add-firewall-rule/src/: lib.rs
operators-kit/add-local-cert/: Cargo.toml
operators-kit/add-local-cert/src/: lib.rs
operators-kit/add-task-scheduler/: Cargo.toml
operators-kit/add-task-scheduler/src/: lib.rs
operators-kit/authenticate-http/: Cargo.toml
operators-kit/authenticate-http/src/: lib.rs
operators-kit/capture-netntlm/: Cargo.toml
operators-kit/capture-netntlm/src/: lib.rs
operators-kit/cred-prompt/: Cargo.toml
operators-kit/cred-prompt/src/: lib.rs
operators-kit/dcom-localserver32/: Cargo.toml
operators-kit/dcom-localserver32/src/: lib.rs
operators-kit/del-exclusion/: Cargo.toml
operators-kit/del-exclusion/src/: lib.rs
operators-kit/del-firewall-rule/: Cargo.toml
operators-kit/del-firewall-rule/src/: lib.rs
operators-kit/del-local-cert/: Cargo.toml
operators-kit/del-local-cert/src/: lib.rs
operators-kit/del-task-scheduler/: Cargo.toml
operators-kit/del-task-scheduler/src/: lib.rs
operators-kit/dll-env-hijacking/: Cargo.toml
operators-kit/dll-env-hijacking/src/: lib.rs
operators-kit/enum-active-hosts/: Cargo.toml
operators-kit/enum-active-hosts/src/: lib.rs
operators-kit/enum-dll-sideloading/: Cargo.toml
operators-kit/enum-drives/: Cargo.toml
operators-kit/enum-exclusions/: Cargo.toml
operators-kit/enum-files/: Cargo.toml
operators-kit/enum-handles/: Cargo.toml
operators-kit/enum-lib/: Cargo.toml
operators-kit/enum-local-cert/: Cargo.toml
operators-kit/enum-sec-products/: Cargo.toml
operators-kit/enum-shares/: Cargo.toml
operators-kit/enum-sysmon/: Cargo.toml
operators-kit/enum-task-scheduler/: Cargo.toml
operators-kit/enum-web-client/: Cargo.toml
operators-kit/execute-crosssession/: Cargo.toml
operators-kit/force-lock-screen/: Cargo.toml
operators-kit/hide-file/: Cargo.toml
operators-kit/inject-poolparty/: Cargo.toml
operators-kit/keylogger-rawinput/: Cargo.toml
operators-kit/password-spray-ad/: Cargo.toml
operators-kit/password-spray-local/: Cargo.toml
operators-kit/spn/: Cargo.toml
operators-kit/wifi-passwords/: Cargo.toml
persistence/aes-loader/: Cargo.toml
persistence/lnk-startup/: Cargo.toml
persistence/schtask-com/: Cargo.toml
persistence/xll-persist/: Cargo.toml
remote-ops/adcs-request/: Cargo.toml
remote-ops/adcs-request-on-behalf/: Cargo.toml
remote-ops/adduser/: Cargo.toml
remote-ops/amsi-patch/: Cargo.toml
remote-ops/ask-mfa/: Cargo.toml
remote-ops/bofkatz/: Cargo.toml
remote-ops/certstore-loot/: Cargo.toml
remote-ops/chromekey/: Cargo.toml
remote-ops/conhost/: Cargo.toml
remote-ops/ctray/: Cargo.toml
remote-ops/dde/: Cargo.toml
remote-ops/enablepriv/: Cargo.toml
remote-ops/etw-patch/: Cargo.toml
remote-ops/firewall-rule/: Cargo.toml
remote-ops/get-azure-token/: Cargo.toml
remote-ops/ghost-task/: Cargo.toml
remote-ops/global-unprotect/: Cargo.toml
remote-ops/inject-apc/: Cargo.toml
remote-ops/inject-crt/: Cargo.toml
remote-ops/inject-ktable/: Cargo.toml
remote-ops/inject-ntcreate/: Cargo.toml
remote-ops/lastpass/: Cargo.toml
remote-ops/make-token/: Cargo.toml
remote-ops/office-tokens/: Cargo.toml
remote-ops/portscan/: Cargo.toml
remote-ops/procdump/: Cargo.toml
remote-ops/processdestroy/: Cargo.toml
remote-ops/processlisthandles/: Cargo.toml
remote-ops/reg-delete/: Cargo.toml
remote-ops/reg-save/: Cargo.toml
remote-ops/reg-set/: Cargo.toml
remote-ops/sc-config/: Cargo.toml
remote-ops/sc-create/: Cargo.toml
remote-ops/sc-delete/: Cargo.toml
remote-ops/sc-description/: Cargo.toml
remote-ops/sc-failure/: Cargo.toml
remote-ops/sc-start/: Cargo.toml
remote-ops/sc-stop/: Cargo.toml
remote-ops/setthreadcontext/: Cargo.toml
remote-ops/shspawnas/: Cargo.toml
remote-ops/shutdown/: Cargo.toml
remote-ops/slack-cookie/: Cargo.toml
remote-ops/slackkey/: Cargo.toml
remote-ops/suspendresume/: Cargo.toml
remote-ops/svcctrl/: Cargo.toml
remote-ops/tooltip/: Cargo.toml
remote-ops/uxsubclassinfo/: Cargo.toml
remote-ops/vaultdump/: Cargo.toml
scripts/: build_all.sh  build_one.sh  gen_bof_catalog.py  gen_manifest.py  setup_macos.sh  verify_coff.sh
situational-awareness/aadjoininfo/: Cargo.toml
situational-awareness/adcs-enum-com/: Cargo.toml
(+243 files in other folders)
