# Cargo.toml
[workspace]
resolver = "2"
members = [
    "common",
    "situational-awareness/uptime",
    "situational-awareness/hostname",
    "situational-awareness/whoami",
    # Phase 2 — 25 remaining SA BOFs
    "situational-awareness/arp",
    "situational-awareness/env",
    "situational-awareness/ipconfig",
    "situational-awareness/netstat",
    "situational-awareness/netuser",
    "situational-awareness/netshare",
    "situational-awareness/netloggedon",
    "situational-awareness/tasklist",
    "situational-awareness/schtasksquery",
    "situational-awareness/reg-query",
    "situational-awareness/windowlist",
    "situational-awareness/routeprint",
    "situational-awareness/ldapsearch",
    "situational-awareness/nonpaged-ldapsearch",
    "situational-awareness/adcs-enum-com",
    "situational-awareness/list-firewall",
    "situational-awareness/enum-filter-driver",
    "situational-awareness/wmi-query",
    "situational-awareness/get-dpapi-system",
    "situational-awareness/clipboard",
    "situational-awareness/dnscache",
    "situational-awareness/driversigs",
    "situational-awareness/findmodule",
    "situational-awareness/sccm-decrypt",
    "situational-awareness/ldapsec-check",
    "situational-awareness/probe",
    # Phase 2 — SA gap-fill batch 1 (12 BOFs ported from upstream cs-sa-bof)
    "situational-awareness/aadjoininfo",
    "situational-awareness/nslookup",
    "situational-awareness/listmods",
    "situational-awareness/cacls",
    "situational-awareness/dir",
    "situational-awareness/get-netsession",
    "situational-awareness/netgroup",
    "situational-awareness/netlocalgroup",
    "situational-awareness/get-password-policy",
    "situational-awareness/sc-query",
    "situational-awareness/schtasksenum",
    "situational-awareness/useridletime",
    # Phase 3 — Remote-Ops BOFs (in progress)
    "remote-ops/enablepriv",
    "remote-ops/reg-save",
    "remote-ops/sc-create",
    "remote-ops/sc-delete",
    "remote-ops/adduser",
    "remote-ops/portscan",
    "remote-ops/suspendresume",
    "remote-ops/etw-patch",
    "remote-ops/amsi-patch",
    "remote-ops/inject-apc",
    "remote-ops/inject-ntcreate",
    "remote-ops/make-token",
    "remote-ops/shspawnas",
    "remote-ops/ghost-task",
    "remote-ops/inject-crt",
    "remote-ops/procdump",
    "remote-ops/global-unprotect",
    "remote-ops/inject-ktable",
    # Phase 4 — OperatorsKit (batch A)
    "operators-kit/enum-sec-products",
    "operators-kit/enum-sysmon",
    "operators-kit/inject-poolparty",
    "operators-kit/spn",
    "operators-kit/wifi-passwords",
    # Phase 4 — OperatorsKit (batch B)
    "operators-kit/cred-prompt",
    "operators-kit/add-exclusion",
    # Phase 4 — OperatorsKit (batch D): COM lateral movement
    "operators-kit/execute-crosssession",
    "operators-kit/dcom-localserver32",
    # Phase 4 — OperatorsKit (batch E): credential / keylog capture
    "operators-kit/keylogger-rawinput",
    "operators-kit/capture-netntlm",
    "operators-kit/authenticate-http",
    # Phase 4 — C2-Collection (batch F, ps* family)
    "c2-collection/psx",
    "c2-collection/psk",
    "c2-collection/psm",
    "c2-collection/findobjects",
    # Phase 4 — C2-Collection (batch G, LDAP/AD)
    "c2-collection/kerberoast",
    "c2-collection/lapsdump",
    # Phase 4 — C2-Collection (batch H, exploits)
    "c2-collection/wdtoggle",
    "c2-collection/cve-2022-26923",
    # Phase 5 — Persistence (by Dani, original)
    "persistence/schtask-com",
    "persistence/lnk-startup",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dani <daniagungg@gmail.com>"]
license = "MIT"

[workspace.dependencies]
rustbof = { git = "https://github.com/joaoviictorti/rustbof", branch = "main" }
windows-sys = { version = "0.52", default-features = false, features = [
    # Foundation + Security
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    # System
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Wmi",
    "Win32_System_DataExchange",
    # Network
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_Ldap",
    "Win32_Networking_WinSock",
    # Storage / FS
    "Win32_Storage_FileSystem",
    # UI
    "Win32_UI_WindowsAndMessaging",
] }
obfstr = "0.4"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
debug         = false
overflow-checks = false

[profile.dev]
panic = "abort"
