# Cargo.toml
[workspace]
resolver = "2"
members = [
    "common",
    "bof-ldap",
    "bof-sspi",
    "bof-kerberos",
    "situational-awareness/uptime",
    "situational-awareness/hostname",
    "situational-awareness/whoami",
    # Phase 2 — 25 remaining SA BOFs
    "situational-awareness/arp",
    "situational-awareness/env",
    "situational-awareness/ipconfig",
    "situational-awareness/netstat",
    "situational-awareness/netuser",
    "situational-awareness/netshare",
    "situational-awareness/netloggedon",
    "situational-awareness/tasklist",
    "situational-awareness/schtasksquery",
    "situational-awareness/reg-query",
    "situational-awareness/windowlist",
    "situational-awareness/routeprint",
    "situational-awareness/ldapsearch",
    "situational-awareness/nonpaged-ldapsearch",
    "situational-awareness/kerberoast",
    "situational-awareness/asreproast",
    "situational-awareness/enum-delegation",
    "situational-awareness/adcs-enum-com",
    "situational-awareness/list-firewall",
    "situational-awareness/enum-filter-driver",
    "situational-awareness/wmi-query",
    "situational-awareness/get-dpapi-system",
    "situational-awareness/clipboard",
    "situational-awareness/dnscache",
    "situational-awareness/driversigs",
    "situational-awareness/findmodule",
    "situational-awareness/sccm-decrypt",
    "situational-awareness/ldapsec-check",
    "situational-awareness/probe",
    # Phase 2 — SA gap-fill batch 1 (12 BOFs ported from upstream cs-sa-bof)
    "situational-awareness/aadjoininfo",
    "situational-awareness/nslookup",
    "situational-awareness/listmods",
    "situational-awareness/cacls",
    "situational-awareness/dir",
    "situational-awareness/get-netsession",
    "situational-awareness/netgroup",
    "situational-awareness/netlocalgroup",
    "situational-awareness/get-password-policy",
    "situational-awareness/sc-query",
    "situational-awareness/schtasksenum",
    "situational-awareness/useridletime",
    # Phase 2 — SA gap-fill batch 2 (21 BOFs)
    "situational-awareness/adcs-enum",
    "situational-awareness/adv-audit-policies",
    "situational-awareness/enum-local-sessions",
    "situational-awareness/get-session-info",
    "situational-awareness/listdns",
    "situational-awareness/locale",
    "situational-awareness/md5",
    "situational-awareness/nettime",
    "situational-awareness/netuptime",
    "situational-awareness/netuse",
    "situational-awareness/netview",
    "situational-awareness/regsession",
    "situational-awareness/resources",
    "situational-awareness/sc-enum",
    "situational-awareness/sc-qc",
    "situational-awareness/sc-qdescription",
    "situational-awareness/sc-qfailure",
    "situational-awareness/sc-qtriggerinfo",
    "situational-awareness/sha1",
    "situational-awareness/sha256",
    "situational-awareness/vssenum",
    # Phase 3 — Remote-Ops BOFs (in progress)
    "remote-ops/enablepriv",
    "remote-ops/reg-save",
    "remote-ops/sc-create",
    "remote-ops/sc-delete",
    "remote-ops/adduser",
    "remote-ops/portscan",
    "remote-ops/suspendresume",
    "remote-ops/etw-patch",
    "remote-ops/amsi-patch",
    "remote-ops/inject-apc",
    "remote-ops/inject-ntcreate",
    "remote-ops/make-token",
    "remote-ops/shspawnas",
    "remote-ops/ghost-task",
    "remote-ops/inject-crt",
    "remote-ops/procdump",
    "remote-ops/global-unprotect",
    "remote-ops/inject-ktable",
    # Phase 3 — Remote-Ops gap-fill batch 2 (BOFs 1-10 by Dani)
    "remote-ops/processdestroy",
    "remote-ops/processlisthandles",
    "remote-ops/reg-delete",
    "remote-ops/reg-set",
    "remote-ops/sc-config",
    "remote-ops/sc-description",
    "remote-ops/sc-failure",
    "remote-ops/sc-start",
    "remote-ops/sc-stop",
    "remote-ops/shutdown",
    "remote-ops/bofkatz",
    "remote-ops/vaultdump",
    # Phase 4 — Remote-Ops new BOFs (batch C): service ctrl / tray / DDE / tooltip / ux / stc
    "remote-ops/svcctrl",
    "remote-ops/conhost",
    "remote-ops/ctray",
    "remote-ops/dde",
    "remote-ops/tooltip",
    "remote-ops/uxsubclassinfo",
    "remote-ops/setthreadcontext",
    # Phase 4 — OperatorsKit (batch A)
    "operators-kit/enum-sec-products",
    "operators-kit/enum-sysmon",
    "operators-kit/inject-poolparty",
    "operators-kit/spn",
    "operators-kit/wifi-passwords",
    # Phase 4 — OperatorsKit (batch B)
    "operators-kit/cred-prompt",
    "operators-kit/add-exclusion",
    # Phase 4 — OperatorsKit (batch D): COM lateral movement
    "operators-kit/execute-crosssession",
    "operators-kit/dcom-localserver32",
    # Phase 4 — OperatorsKit (batch E): credential / keylog capture
    "operators-kit/keylogger-rawinput",
    "operators-kit/capture-netntlm",
    "operators-kit/authenticate-http",
    # Phase 4 — OperatorsKit (batch I): enumeration + lock
    "operators-kit/enum-active-hosts",
    "operators-kit/enum-dll-sideloading",
    "operators-kit/enum-drives",
    "operators-kit/enum-exclusions",
    "operators-kit/enum-files",
    "operators-kit/enum-handles",
    "operators-kit/enum-lib",
    "operators-kit/dll-env-hijacking",
    "operators-kit/enum-task-scheduler",
    "operators-kit/enum-shares",
    "operators-kit/force-lock-screen",
    "operators-kit/enum-web-client",
    # Phase 4 — C2-Collection (batch F, ps* family)
    "c2-collection/psx",
    "c2-collection/psk",
    "c2-collection/psm",
    "c2-collection/findobjects",
    # Phase 4 — C2-Collection (batch G, LDAP/AD)
    "c2-collection/kerberoast",
    "c2-collection/lapsdump",
    # Phase 4 — C2-Collection (batch H, exploits)
    "c2-collection/wdtoggle",
    "c2-collection/cve-2022-26923",
    # Phase 5 — Persistence (by Dani, original)
    "persistence/schtask-com",
    "persistence/lnk-startup",
    "persistence/aes-loader",
    # Phase 5 — credential/token enumeration BOFs (15-19)
    "remote-ops/chromekey",
    "remote-ops/get-azure-token",
    "remote-ops/ask-mfa",
    "remote-ops/adcs-request",
    "remote-ops/adcs-request-on-behalf",
    # Phase 5 — credential/token enumeration BOFs (11-14)
    "remote-ops/slack-cookie",
    "remote-ops/slackkey",
    "remote-ops/office-tokens",
    "remote-ops/lastpass",
    # Phase 5 — OperatorsKit batch D2 (11 BOFs)
    "operators-kit/add-firewall-rule",
    "operators-kit/del-firewall-rule",
    "operators-kit/add-local-cert",
    "operators-kit/del-local-cert",
    "operators-kit/enum-local-cert",
    "operators-kit/add-task-scheduler",
    "operators-kit/del-task-scheduler",
    "operators-kit/del-exclusion",
    "operators-kit/hide-file",
    "operators-kit/password-spray-ad",
    "operators-kit/password-spray-local",
    # Phase 5 — C2-Collection batch I (5 BOFs)
    "c2-collection/add-machine-account",
    "c2-collection/petit-potam",
    "c2-collection/spray-ad",
    "c2-collection/start-web-client",
    "c2-collection/winver",
    # Phase 10 — New SA + Remote-Ops BOFs
    "situational-awareness/cloud-metadata",
    "remote-ops/certstore-loot",
    "situational-awareness/powershell-history",
    "situational-awareness/asr-status",
    "situational-awareness/process-tokens",
    # Phase 11 — additional SA + Remote-Ops BOFs
    "remote-ops/firewall-rule",
    "situational-awareness/ai-surface",
    "situational-awareness/amsi-etw-detect",
    "situational-awareness/bitlocker-status",
    "situational-awareness/ide-extension-surface",
    "situational-awareness/proxy-enum",
    "situational-awareness/wevt-logon-enum",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dani <daniagungg@gmail.com>"]
license = "MIT"

[workspace.dependencies]
rustbof = { git = "https://github.com/joaoviictorti/rustbof", branch = "main" }
windows-sys = { version = "0.52", default-features = false, features = [
    # Foundation + Security
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    # System
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Wmi",
    "Win32_System_DataExchange",
    # Network
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_Ldap",
    "Win32_Networking_WinSock",
    # Storage / FS
    "Win32_Storage_FileSystem",
    # UI
    "Win32_UI_WindowsAndMessaging",
] }
obfstr = "0.4"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
debug         = false
overflow-checks = false

[profile.dev]
panic = "abort"
