[package]
name = "add-machine-account"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Add a machine account to Active Directory via NetUserAdd"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "add_machine_account"
