[package]
name = "findobjects"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Injection-candidate process finder via indirect NtQuerySystemInformation"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys = { workspace = true, features = ["Win32_Foundation"] }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "findobjects"
