[package]
name = "kerberoast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Kerberos TGS extraction via LSA SSPI"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys = { workspace = true, features = ["Win32_Foundation"] }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "kerberoast"
