[package]
name = "lapsdump"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LAPS password extraction via LDAP — by Dani."

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys = { workspace = true, features = ["Win32_Foundation"] }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "lapsdump"
