[package]
name = "petit-potam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PetitPotam — coerce target machine NTLM auth to attacker listener via UNC path"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "petit_potam"
