[package]
name = "psm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Current-process module enumeration via PEB InLoadOrderModuleList"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "psm"
