[package]
name = "psx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Process list + token integrity + security-product detection"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "psx"
