[package]
name = "start-web-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Start the WebClient service to enable WebDAV for UNC-path coercion — by Dani"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "start_web_client"
