[package]
name = "wdtoggle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WDigest credential caching toggle via registry — by Dani."

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys = { workspace = true, features = ["Win32_Foundation"] }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "wdtoggle"
