[package]
name = "winver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Display Windows version, architecture, and current user context — by Dani"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "winver"
