[package]
name = "add-exclusion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Add Windows Defender exclusion via WMI MSFT_MpPreference — COM-based, no PowerShell"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "add_exclusion"
