[package]
name = "add-firewall-rule"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Add a Windows Firewall rule via registry write — by Dani"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "add_firewall_rule"
