[package]
name = "add-local-cert"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Add a DER certificate to a local Windows certificate store"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "add_local_cert"
