[package]
name = "authenticate-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Force outbound HTTP NTLM auth (relay capture)"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys = { workspace = true, features = ["Win32_Foundation"] }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "authenticate_http"
