[package]
name = "capture-netntlm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NetNTLMv2 hash capture via SSPI"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys = { workspace = true, features = ["Win32_Foundation"] }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "capture_netntlm"
