[package]
name = "cred-prompt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native Windows credential prompt — captures domain/user/password via CredUIPromptForWindowsCredentialsW"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "cred_prompt"
