[package]
name = "del-exclusion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Remove a Windows Defender exclusion from registry — by Dani"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "del_exclusion"
