[package]
name = "del-firewall-rule"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Delete a Windows Firewall rule by name from registry — by Dani"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "del_firewall_rule"
