[package]
name = "del-local-cert"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Delete a certificate from a local store by SHA1 thumbprint — by Dani"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "del_local_cert"
