[package]
name = "del-task-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Delete a scheduled task via ITaskService COM vtable"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "del_task_scheduler"
