[package]
name = "dll-env-hijacking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Find writable PATH entries for DLL hijacking opportunities"

[dependencies]
rustbof.workspace = true
common = { path = "../../common" }
windows-sys.workspace = true
obfstr.workspace = true

[lib]
crate-type = ["staticlib"]
name = "dll_env_hijacking"
